--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/f0be14b3ea.js" crossorigin="anonymous"></script>
+    <title>Home-Work2</title>
+
 </head>
-<body style="height: 100vh; align-items: center; margin: auto;">
-    <h1 style="height: 100vh; width: 100%; align-items: center; text-align: center; margin: auto;">New web starts</h1>
+<body>
+    <div class="header">
+        <div class="content">
+            <div class="logo">Rashof</div>
+            <div class="Navigation">
+                <a href="#">Home</a>
+                <div class="DropDown">
+                    <a href="#">DropDown <i class='bx bx-chevron-down'></i></a>
+                    <div class="droped">
+                        <a href="#">menu one</a>
+                        <div class="sub-nav">
+                            <a href="#">menu two <i class='bx bx-chevron-right'></i></a>
+                            <div class="sub-list">
+                                <a href="#">Sub Menu one</a>
+                                <a href="#">Sub Menu two</a>
+                                <a href="#">Sub Menu three</a>
+                            </div>
+
+                        </div>
+                        <a href="#">menu three</a>
+                    </div>
+                </div>
+                <a href="#">About</a>
+                <a href="#">Service</a>
+                <a href="#">FAQ</a>
+                <a href="#">Contact Us</a>
+                <button class="btn">Download now</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
