--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <a href="/about.html">About</a>
-                <a href="#">Service</a>
+                <a href="./service.html">Service</a>
                 <a href="#">FAQ</a>
                 <a href="#">Contact Us</a>
                 <button class="btn">Download now</button>
@@ -212,8 +212,8 @@
                 <p class="para">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             </div>
             <div class="container">
+                <i class='bx bx-chevron-left'></i>
                 <div class="items">
-                    <i class='bx bx-chevron-left'></i>
                     <div class="item">
                         <p>"Far the away, behind the word mountains, far from the countries Vokalia and Consonatia, there live the blind texts"</p>
                         <div class="img">
@@ -250,8 +250,8 @@
                             </div>
                         </div>
                     </div>
-                    <i class='bx bx-chevron-right'></i>
                 </div>
+                <i class='bx bx-chevron-right'></i>
             </div>
         </div>
 
