--- a/service.html
+++ b/service.html
@@ -9,7 +9,8 @@
     <title>Our Services</title>
 </head>
 <body>
-    <!-- -------------------------------- Header Starts---------------------------- -->
+    
+    <!---------------------------------- Header Starts------------------------------>
 
     <div class="header">
         <div class="content">
@@ -34,7 +35,7 @@
                 </div>
                 <a href="./about.html">About</a>
                 <a href="./service.html">Service</a>
-                <a href="#">FAQ</a>
+                <a href="./FAQ.html">FAQ</a>
                 <a href="#">Contact Us</a>
                 <button class="btn">Download now</button>
             </div>
@@ -42,14 +43,177 @@
     </div>
 
 
-        <!-- -------------------------------- Header Ends---------------------------- -->
+    <!---------------------------------- Header Ends------------------------------>
+
+
+    <!---------------------------------- Home section Starts---------------------->
+
+    <div class="home">
+        <div class="container">
+            <div class="side left">
+                <h5>Services</h5>
+                <h1>Services</h1>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                <div class="buttion-section">
+                    <button class="btn b">How we work</button>
+                    <button class="btn bt">Contact us</button>
+                </div>
+            </div>
+            <div class="side right">
+                <img src="/img/first-home.webp" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <!--------------------------------- Home section Ends-------------------------->
+
+
+
+    <!--------------------------Service section Starts----------------------------->
+
+    <div class="service-section">
+       <div class="container">
+           <div class="item">
+               <div class="img">
+                   <img src="./img/design.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+           <div class="item">
+               <div class="img">
+                   <img src="./img/icons8-bitcoin-49.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+           <div class="item">
+               <div class="img">
+                   <img src="./img/icons8-social-media-marketing-96.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+           <div class="item">
+               <div class="img">
+                   <img src="./img/digital-campaign_2893566.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+           <div class="item">
+               <div class="img">
+                   <img src="./img/links.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+           <div class="item">
+               <div class="img">
+                   <img src="./img/target_2694806.png" alt="">
+               </div>
+               <div class="text-op">
+                   <h2>Design Marketing</h2>
+                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               </div>
+           </div>
+       </div>
+    </div>
+
+    <!----------------------------------Service section Ends------------------------->   
+
+
+    <!---------------------------------Stats Section Starts----------------------------->
+
+    <div class="stats">
+        <div class="container">
+            <div class="text">
+                <p1>STATS</p1>
+                <h1>Stats</h1>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            </div>
+            <div class="numaric">
+                <span>3,923</span><span>131</span><span>962</span><span>5,949</span>
+            </div>
+        </div>
+    </div>
+
+
+    <!---------------------------------Stats Section Ends---------------------------->
+
+
+
+    <!---------------------------Testimonials section Starts-------------------------->
+
+    <div class="Testimonials">
+        <div class="text">
+            <p class="b">Testimonials</p>
+            <h1>Testimonials</h1>
+            <p class="para">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+        <div class="container">
+            <i class='bx bx-chevron-left'></i>
+            <div class="items">
+                <div class="item">
+                    <p>"Far the away, behind the word mountains, far from the countries Vokalia and Consonatia, there live the blind texts"</p>
+                    <div class="img">
+                        <div class="img2">
+                            <img src="./img/IMG_20220709_061249.jpg" alt="">
+                        </div>
+                        <div class="name">
+                            <h4>MD RATAN MIA</h4>
+                            <p>Director at Google</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <p>"Far the away, behind the word mountains, far from the countries Vokalia and Consonatia, there live the blind texts"</p>
+                    <div class="img">
+                        <div class="img2">
+                            <img src="./img/IMG_20220709_061249.jpg" alt="">
+                        </div>
+                        <div class="name">
+                            <h4>MD RATAN MIA</h4>
+                            <p>Director at Google</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <p>"Far the away, behind the word mountains, far from the countries Vokalia and Consonatia, there live the blind texts"</p>
+                    <div class="img">
+                        <div class="img2">
+                            <img src="./img/IMG_20220709_061249.jpg" alt="">
+                        </div>
+                        <div class="name">
+                            <h4>MD RATAN MIA</h4>
+                            <p>Director at Google</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <i class='bx bx-chevron-right'></i>
+        </div>
+    </div>
+
+    <!--------------------------Testimonials section Ends------------------------>
 
 
 
 
-         <!-- -----------------------Footer section starts------------------- -->
+    <!---------------------------Footer section starts-------------------------->
 
-     <div class="footer">
+    <div class="footer">
         <div class="container">
             <div class="item" style="width: 400px;">
                 <h3>About Cololib</h3>
@@ -86,7 +250,7 @@
         <p style="text-align: center; font-weight: bolder; padding-bottom: 20px; opacity: .5;">Copyright ©2023 All rights reserved | This template is made with  by Colorlib</p>
     </div>
 
-    <!-- -----------------------Footer section Ends------------------- -->
+    <!--------------------------Footer section Ends---------------------->
     
 </body>
 </html>
