--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="/about.html">About</a>
                 <a href="./service.html">Service</a>
                 <a href="./FAQ.html">FAQ</a>
-                <a href="#">Contact Us</a>
+                <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
             </div>
         </div>
