--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
     <title>Our Services</title>
 </head>
 <body>
-    
+
     <!---------------------------------- Header Starts------------------------------>
 
     <div class="header">
@@ -36,7 +36,7 @@
                 <a href="./about.html">About</a>
                 <a href="./service.html">Service</a>
                 <a href="./FAQ.html">FAQ</a>
-                <a href="#">Contact Us</a>
+                <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
             </div>
         </div>
