--- a/FAQ.html
+++ b/FAQ.html
@@ -69,7 +69,34 @@
     <!--------------------------------- Home section Ends-------------------------->
 
 
-
+    <div class="question">
+        <div class="container">
+            <div class="text">
+                <p1>FAQ</p1>
+                <h1>Frequently Asked Questions</h1>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            </div>
+            <div class="qtn">
+                <ul>
+                    <li>
+                        <label for="span"><i class="fa-solid fa-plus"></i><i class="fa-solid fa-minus"></i>How can i dowanload?</label>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    </li>
+                    <li>
+                        <label for="span"><i class="fa-solid fa-plus"></i><i class="fa-solid fa-minus"></i>Is it free?</label>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    </li>
+                    <li>
+                        <label for="span"><i class="fa-solid fa-plus"></i><i class="fa-solid fa-minus"></i>Where can i get a support?</label>
+                        <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+                        <p>Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
 
 
