--- a/Contact.html
+++ b/Contact.html
@@ -70,6 +70,37 @@
     <!--------------------------------- Home section Ends-------------------------->
 
 
+    <!--------------------------------- Contact section Starts-------------------------->
+
+<div class="container">
+    <p>Contact us</p>
+    <h1>Let's have talk</h1>
+    <br>
+    <form action="#">
+        <div class="name">
+            <div class="child">
+                <label for="name">First Name</label><br>
+                <input type="text" name="name" id="">
+            </div>
+            <div class="child">
+                <label for="last-name">Last Name</label><br>
+                <input type="text" name="last-name" id="">
+            </div>
+        </div>
+        <br><br>
+        <label for="email">Email Address</label><br>
+        <input type="email" name="email" id="" placeholder="Enter valid email" required> <br><br><br>
+        <label for="message">Message</label><br>
+        <textarea name="" id="message" cols="62" placeholder="Enter your text here" rows="6"></textarea><br><br>
+        <button class="btn">Send Message</button>
+
+    </form>
+</div>
+
+
+    <!--------------------------------- Contact section Ends-------------------------->
+
+
 
 
     <!---------------------------Footer section starts-------------------------->
