--- a/FAQ.html
+++ b/FAQ.html
@@ -85,7 +85,7 @@
                 <div class="head">
                     <i class="fa-solid fa-plus"></i>
                     <i class="fa-solid fa-minus"></i>
-                    <Span>How can i download?</Span>
+                    <Span>How can I download?</Span>
                     <div class="child">
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                         <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
