--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="content">
             <div class="logo">Rashof</div>
             <div class="Navigation">
+                <input type="checkbox" name="check" id="check">
+                <label for="check" class="check"><i class="fa-solid fa-bars"></i></label>
                 <a href="/index.html">Home</a>
                 <div class="DropDown">
                     <a href="#">DropDown <i class='bx bx-chevron-down'></i></a>
