--- a/Contact.html
+++ b/Contact.html
@@ -34,11 +34,19 @@
                         <a href="#">menu three</a>
                     </div>
                 </div>
-                <a href="./about.html">About</a>
+                <a href="/about.html">About</a>
                 <a href="./service.html">Service</a>
                 <a href="./FAQ.html">FAQ</a>
                 <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="./service.html">Service</a></li>
+                    <li><a href="./FAQ.html">FAQ</a></li>
+                    <li><a href="./Contact.html">Contact Us</a></li>
+                    <li><button class="btn">Download now</button></li>
+                </ul>
             </div>
         </div>
     </div>
