--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 <a href="./FAQ.html">FAQ</a>
                 <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="./service.html">Service</a></li>
+                    <li><a href="./FAQ.html">FAQ</a></li>
+                    <li><a href="./Contact.html">Contact Us</a></li>
+                    <li><button class="btn">Download now</button></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -50,7 +58,7 @@
 
 
 
-    <!------------------------------ Home section Starts------------------------>
+    <!------------------------------ Home section Starts ------------------------>
         
     <div class="home">
             <div class="container">
