--- a/Contact.html
+++ b/Contact.html
@@ -91,7 +91,7 @@
             <div class="child">
                 <label for="name">First Name</label><br>
                 <input type="text" name="name" id="">
-            </div>
+            </div><br>
             <div class="child">
                 <label for="last-name">Last Name</label><br>
                 <input type="text" name="last-name" id="">
@@ -99,7 +99,7 @@
         </div>
         <br><br>
         <label for="email">Email Address</label><br>
-        <input type="email" name="email" id="" placeholder="Enter valid email" required> <br><br><br>
+        <input class="email" type="email" name="email" id="" placeholder="Enter valid email" required> <br><br><br>
         <label for="message">Message</label><br>
         <textarea name="" id="message" cols="62" placeholder="Enter your text here" rows="6"></textarea><br><br>
         <button class="btn">Send Message</button>
