--- a/Contact.html
+++ b/Contact.html
@@ -1,158 +1,187 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://kit.fontawesome.com/f0be14b3ea.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Our Services</title>
-</head>
-<body>
-    
-    <!---------------------------------- Header Starts------------------------------>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+			rel="stylesheet" />
+		<script
+			src="https://kit.fontawesome.com/f0be14b3ea.js"
+			crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="style.css" />
+		<title>Our Services</title>
+	</head>
+	<body>
+		<!---------------------------------- Header Starts------------------------------>
 
-    <div class="header">
-        <div class="content">
-            <div class="logo">Rashof</div>
-            <div class="Navigation">
-                <input type="checkbox" name="check" id="check">
-                <label for="check" class="check"><i class="fa-solid fa-bars"></i></label>
-                <a href="/index.html">Home</a>
-                <div class="DropDown">
-                    <a href="#">DropDown <i class='bx bx-chevron-down'></i></a>
-                    <div class="droped">
-                        <a href="#">menu one</a>
-                        <div class="sub-nav">
-                            <a href="#">menu two <i class='bx bx-chevron-right'></i></a>
-                            <div class="sub-list">
-                                <a href="#">Sub Menu one</a>
-                                <a href="#">Sub Menu two</a>
-                                <a href="#">Sub Menu three</a>
-                            </div>
-                        </div>
-                        <a href="#">menu three</a>
-                    </div>
-                </div>
-                <a href="/about.html">About</a>
-                <a href="./service.html">Service</a>
-                <a href="./FAQ.html">FAQ</a>
-                <a href="./Contact.html">Contact Us</a>
-                <button class="btn">Download now</button>
-                <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="./service.html">Service</a></li>
-                    <li><a href="./FAQ.html">FAQ</a></li>
-                    <li><a href="./Contact.html">Contact Us</a></li>
-                    <li><button class="btn">Download now</button></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+		<div class="header">
+			<div class="content">
+				<div class="logo">Rashof</div>
+				<div class="Navigation">
+					<input type="checkbox" name="check" id="check" />
+					<label for="check" class="check"
+						><i class="fa-solid fa-bars"></i
+					></label>
+					<a href="/index.html">Home</a>
+					<div class="DropDown">
+						<a href="#">DropDown <i class="bx bx-chevron-down"></i></a>
+						<div class="droped">
+							<a href="#">menu one</a>
+							<div class="sub-nav">
+								<a href="#">menu two <i class="bx bx-chevron-right"></i></a>
+								<div class="sub-list">
+									<a href="#">Sub Menu one</a>
+									<a href="#">Sub Menu two</a>
+									<a href="#">Sub Menu three</a>
+								</div>
+							</div>
+							<a href="#">menu three</a>
+						</div>
+					</div>
+					<a href="/about.html">About</a>
+					<a href="./service.html">Service</a>
+					<a href="./FAQ.html">FAQ</a>
+					<a href="./Contact.html">Contact Us</a>
+					<button class="btn">Download now</button>
+					<ul>
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="/about.html">About</a></li>
+						<li><a href="./service.html">Service</a></li>
+						<li><a href="./FAQ.html">FAQ</a></li>
+						<li><a href="./Contact.html">Contact Us</a></li>
+						<li><button class="btn">Download now</button></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
+		<!---------------------------------- Header Ends------------------------------>
 
-    <!---------------------------------- Header Ends------------------------------>
+		<!---------------------------------- Home section Starts ---------------------->
 
+		<div class="home">
+			<div class="container">
+				<div class="side left">
+					<h5>CONTACT</h5>
+					<h1>Get In Touch</h1>
+					<p>
+						Far far away, behind the word mountains, far from the countries
+						Vokalia and Consonantia, there live the blind texts. Separated they
+						live in Bookmarksgrove right at the coast of the Semantics, a large
+						language ocean.
+					</p>
+					<div class="buttion-section">
+						<button class="btn b">How we work</button>
+						<button class="btn bt">Contact us</button>
+					</div>
+				</div>
+				<div class="side right">
+					<img src="/img/first-home.webp" alt="" />
+				</div>
+			</div>
+		</div>
 
-    <!---------------------------------- Home section Starts---------------------->
+		<!----------------------------------- Home section Ends---------------------------->
 
+		<!--------------------------------- Contact section Starts-------------------------->
 
-    <div class="home">
-        <div class="container">
-            <div class="side left">
-                <h5>CONTACT</h5>
-                <h1>Get In Touch</h1>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                <div class="buttion-section">
-                    <button class="btn b">How we work</button>
-                    <button class="btn bt">Contact us</button>
-                </div>
-            </div>
-            <div class="side right">
-                <img src="/img/first-home.webp" alt="">
-            </div>
-        </div>
-    </div>
+		<div class="container">
+			<p>Contact us</p>
+			<h1>Let's have talk</h1>
+			<br />
 
+			<form action="#">
+				<div class="name">
+					<div class="child">
+						<label for="name">First Name</label><br />
+						<input type="text" name="name" id="" />
+					</div>
+					<br />
+					<div class="child">
+						<label for="last-name">Last Name</label><br />
+						<input type="text" name="last-name" id="" />
+					</div>
+				</div>
+				<br /><br />
+				<label for="email">Email Address</label><br />
+				<input
+					class="email"
+					type="email"
+					name="email"
+					id=""
+					placeholder="Enter valid email"
+					required />
+				<br /><br /><br />
+				<label for="message">Message</label><br />
+				<textarea
+					name=""
+					id="message"
+					cols="62"
+					placeholder="Enter your text here"
+					rows="6"></textarea
+				><br /><br />
+				<button class="btn">Send Message</button>
+			</form>
+		</div>
 
-    <!----------------------------------- Home section Ends---------------------------->
+		<!--------------------------------- Contact section Ends-------------------------->
 
+		<!-------------------------------Footer section starts--------------------------->
 
-    <!--------------------------------- Contact section Starts-------------------------->
+		<div class="footer">
+			<div class="container">
+				<div class="item" style="width: 400px">
+					<h3>About Cololib</h3>
+					<p>
+						Far far away, behind the word mountains, far from the countries
+						Vokalia and Consonantia, there live the blind texts.
+					</p>
+					<br />
+					<i class="fa-brands fa-facebook"></i>
+					<i class="fa-brands fa-twitter"></i>
+					<i class="fa-brands fa-instagram"></i>
+				</div>
+				<div class="item">
+					<h3>Pages</h3>
+					<p>Blog</p>
+					<p>About</p>
+					<p>Contact</p>
+				</div>
+				<div class="item">
+					<h3>Resources</h3>
+					<p>Blog</p>
+					<p>About</p>
+					<p>Contact</p>
+				</div>
+				<div class="item">
+					<h3>Contact</h3>
+					<address>
+						<ul>
+							<li><i class="fa-regular fa-envelope"></i> info@Cololib</li>
+							<li><i class="fa-solid fa-phone"></i> +1 222 212 3819</li>
+							<li>
+								<i class="fa-solid fa-location-dot"></i> 43 Raymouth Rd.
+								Baltemoer, London 3910
+							</li>
+						</ul>
+					</address>
+				</div>
+			</div>
+			<p
+				style="
+					text-align: center;
+					font-weight: bolder;
+					padding-bottom: 20px;
+					opacity: 0.5;
+				">
+				Copyright ©2023 All rights reserved | This template is made with by
+				Colorlib
+			</p>
+		</div>
 
-<div class="container">
-    <p>Contact us</p>
-    <h1>Let's have talk</h1>
-    <br>
-
-    <form action="#">
-        <div class="name">
-            <div class="child">
-                <label for="name">First Name</label><br>
-                <input type="text" name="name" id="">
-            </div><br>
-            <div class="child">
-                <label for="last-name">Last Name</label><br>
-                <input type="text" name="last-name" id="">
-            </div>
-        </div>
-        <br><br>
-        <label for="email">Email Address</label><br>
-        <input class="email" type="email" name="email" id="" placeholder="Enter valid email" required> <br><br><br>
-        <label for="message">Message</label><br>
-        <textarea name="" id="message" cols="62" placeholder="Enter your text here" rows="6"></textarea><br><br>
-        <button class="btn">Send Message</button>
-    </form>
-
-</div>
-
-
-    <!--------------------------------- Contact section Ends-------------------------->
-
-
-
-
-    <!-------------------------------Footer section starts--------------------------->
-
-    <div class="footer">
-        <div class="container">
-            <div class="item" style="width: 400px;">
-                <h3>About Cololib</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p><br>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-
-            </div>
-            <div class="item">
-                <h3>Pages</h3>
-                <p>Blog</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <div class="item">
-                <h3>Resources</h3>
-                <p>Blog</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <div class="item">
-                <h3>Contact
-                </h3>
-                <address>
-                    <ul>
-                        <li><i class="fa-regular fa-envelope"></i> info@Cololib</li>
-                        <li><i class="fa-solid fa-phone"></i> +1 222 212 3819</li>
-                        <li><i class="fa-solid fa-location-dot"></i> 43 Raymouth Rd. Baltemoer, London 3910</li>
-                    </ul>
-                </address>
-            </div>
-        </div>
-        <p style="text-align: center; font-weight: bolder; padding-bottom: 20px; opacity: .5;">Copyright ©2023 All rights reserved | This template is made with  by Colorlib</p>
-    </div>
-
-    <!----------------------------Footer section Ends------------------------>
-    
-</body>
+		<!----------------------------Footer section Ends------------------------>
+	</body>
 </html>
