--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
                         <a href="#">menu three</a>
                     </div>
                 </div>
-                <a href="/about.html">About</a>
+                <a href="./about.html">About</a>
                 <a href="./service.html">Service</a>
                 <a href="./FAQ.html">FAQ</a>
                 <a href="./Contact.html">Contact Us</a>
