--- a/Contact.html
+++ b/Contact.html
@@ -40,8 +40,8 @@
                 <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a href="./service.html">Service</a></li>
                     <li><a href="./FAQ.html">FAQ</a></li>
                     <li><a href="./Contact.html">Contact Us</a></li>
