--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="Navigation">
                 <input type="checkbox" name="check" id="check">
                 <label for="check" class="check"><i class="fa-solid fa-bars"></i></label>
-                <a href="/index.html">Home</a>
+                <a href="./index.html">Home</a>
                 <div class="DropDown">
                     <a href="#">DropDown <i class='bx bx-chevron-down'></i></a>
                     <div class="droped">
@@ -36,14 +36,14 @@
                         <a href="#">menu three</a>
                     </div>
                 </div>
-                <a href="/about.html">About</a>
+                <a href="./about.html">About</a>
                 <a href="./service.html">Service</a>
                 <a href="./FAQ.html">FAQ</a>
                 <a href="./Contact.html">Contact Us</a>
                 <button class="btn">Download now</button>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a href="./service.html">Service</a></li>
                     <li><a href="./FAQ.html">FAQ</a></li>
                     <li><a href="./Contact.html">Contact Us</a></li>
