--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
             <div class="Navigation">
                 <input type="checkbox" name="check" id="check">
                 <label for="check" class="check"><i class="fa-solid fa-bars"></i></label>
-                <a href="/index.html">Home</a>
+                <a href="./index.html">Home</a>
                 <div class="DropDown">
                     <a href="#">DropDown <i class='bx bx-chevron-down'></i></a>
                     <div class="droped">
